# pj_rtmlib_2dpose

./: .gitignore  =1.8.0  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  README.md  README.md.backup  TODO_OPTIMIZATIONS.md  __init__.py  constructor_test.py  optimized_configs_test.py  pose_estimation.py  proper_ultimate_pipeline.py  pyproject.toml  requirements.txt  setup.py  setup_colab.sh  simple_performance_test.py  test_pose_estimation.py  ultimate_pipeline.py  validate_installation.py  video_processor.py
examples/: debug_constructor.py  debug_video_pose.py  debug_video_pose2.py  optimized_pose_estimation.py  optimized_video_pose_estimation.py  pose_estimation.py  simple_video_demo.py  single_image_demo.py  video_pose_estimation.py  video_processor.py  webui.py
fresh_examples/: test_single_image.py  test_single_image_speed.py  test_single_image_speed_quiet.py  test_video_gpu_check.py  test_video_pipeline.py  test_video_pipeline_optimized.py
